--- a/css/light.css
+++ b/css/light.css
@@ -92,7 +92,7 @@ p {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: .25rem, .25rem;
+  padding: .25rem .25rem;
   min-height: 48px;
 }
 
